# flash-attention

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CLAUDE.zh-cn.md  CMakeLists.txt  Dockerfile  Dockerfile.rocm  Dockerfile_1.12.rocm  Dockerfile_nightly.rocm  Dockerfile_orig.rocm  MANIFEST.in  Makefile  README.md  README.zh-cn.md  README_FA2.md  README_TREE.md  WindowsWhlBuilder_cuda.bat  __init__.py  after.txt  autotunner.md  baseline.txt  bench.py  build.sh  build_and_run.sh  calculation.txt  check_data_types.py  check_oob_rows.py  check_pytorch_implementation.py  check_pytorch_mask.py  compute_sm.py  debug_kernel_output.py  debug_mask.py  debug_mask2.py  debug_pytorch_inbounds.py  flash_attention.py  flash_attn_interface.py  flash_blocksparse_attention.py  (+29 more)
AI/: CI_SETUP.md  CLC_TRACE_DEBUG.md  DEBUG_2CTA.md  DROPOUT_IMPLEMENTATION_NOTES.md  RACECHECK_TMA_HAZARD.md  SASS_MMA_ANALYSIS.md  SM120_FA4_PLAN.md  SM90_BLOCK_SIZE_TUNING.md  SM90_R2P_MASKING_SASS.md  VARLEN_PREPROCESS_TILE_BUG.md  parse_clc_log.py  racecheck_repro_1d_bulk.py  racecheck_repro_1d_tensor.py
autotuner/: base_tunner.py  code_emitter.py  profile_attn.py  test_run_tunner.py  tunner.py
benchmarks/: GAE_COMPARISON.md  V100_BENCHMARK_REPORT.md  bench_hdim96.py  bench_nightly.py  bench_sm90.py  benchmark_alibi.py  benchmark_attn.py  benchmark_attn_scheduler.py  benchmark_causal.py  benchmark_dispatch_overhead.py  benchmark_flash_attention.py  benchmark_flash_attention_csv.py  benchmark_flash_attention_fa3.py  benchmark_flash_attention_forward.py  benchmark_flash_attention_fwd.py  benchmark_flash_attention_sycl.py  benchmark_flash_ring_attention_fa3.py  benchmark_gemm.py  benchmark_head_headdim.py  benchmark_headdim.py  benchmark_mla_paged_kv.py  benchmark_paged_attn.py  benchmark_rotary.py  benchmark_rpe.py  benchmark_sm100_decode_q1.py  benchmark_sm120_fwd.py  benchmark_varlen_sched.py  benchmark_varlen_scheduler.py  benchmark_varlen_score_mod.py  benchmark_waller_comparison.py  benchmark_waller_comprehensive_v2.py  benchmark_waller_fixed_results.json  clc_bench.py  flash_attn_with_sink.py  flash_attn_with_sink_fused.py  naive_attn_with_sink.py  part1.py  part2.py  part3.py  part4.py  (+4 more)
cmake/: utils.cmake
csrc/flash_attn_rocm/: CMakeLists.txt  Dockerfile  README.md  build.sh  compile.sh  example_main.cpp  flash_api.cpp  fmha_api.cpp
csrc/flash_attn_rocm/src/: bwd_device_gemm_invoker.hpp  bwd_device_gemm_launcher.h  bwd_device_gemm_template.h  bwd_device_gemm_template.hpp  device_gemm_trait.h  device_gemm_trait.hpp  device_memory.cpp  flash_bwd_runner_batched_hdim128_bf16_causal_gfx9x.cpp  flash_bwd_runner_batched_hdim128_bf16_noncausal_gfx9x.cpp  flash_bwd_runner_batched_hdim128_fp16_causal_gfx9x.cpp  flash_bwd_runner_batched_hdim128_fp16_noncausal_gfx9x.cpp  flash_bwd_runner_batched_hdim32_bf16_causal_gfx9x.cpp  flash_bwd_runner_batched_hdim32_bf16_noncausal_gfx9x.cpp  flash_bwd_runner_batched_hdim32_fp16_causal_gfx9x.cpp  flash_bwd_runner_batched_hdim32_fp16_noncausal_gfx9x.cpp  flash_bwd_runner_batched_hdim64_bf16_causal_gfx9x.cpp  flash_bwd_runner_batched_hdim64_bf16_noncausal_gfx9x.cpp  flash_bwd_runner_batched_hdim64_fp16_causal_gfx9x.cpp  flash_bwd_runner_batched_hdim64_fp16_noncausal_gfx9x.cpp  flash_bwd_runner_gfx90a.h  flash_bwd_runner_gfx9x.h  flash_bwd_runner_grouped_hdim128_bf16_causal_gfx9x.cpp  flash_bwd_runner_grouped_hdim128_bf16_noncausal_gfx9x.cpp  flash_bwd_runner_grouped_hdim128_fp16_causal_gfx9x.cpp  flash_bwd_runner_grouped_hdim128_fp16_noncausal_gfx9x.cpp  flash_bwd_runner_grouped_hdim32_bf16_causal_gfx9x.cpp  flash_bwd_runner_grouped_hdim32_bf16_noncausal_gfx9x.cpp  flash_bwd_runner_grouped_hdim32_fp16_causal_gfx9x.cpp  flash_bwd_runner_grouped_hdim32_fp16_noncausal_gfx9x.cpp  flash_bwd_runner_grouped_hdim64_bf16_causal_gfx9x.cpp  flash_bwd_runner_grouped_hdim64_bf16_noncausal_gfx9x.cpp  flash_bwd_runner_grouped_hdim64_fp16_causal_gfx9x.cpp  flash_bwd_runner_grouped_hdim64_fp16_noncausal_gfx9x.cpp  flash_bwd_runner_kloop_hdim128_bf16_causal_gfx90a.cpp  flash_bwd_runner_kloop_hdim128_bf16_noncausal_gfx90a.cpp  flash_bwd_runner_kloop_hdim128_fp16_causal_gfx90a.cpp  flash_bwd_runner_kloop_hdim128_fp16_noncausal_gfx90a.cpp  flash_bwd_runner_kloop_hdim32_bf16_causal_gfx90a.cpp  flash_bwd_runner_kloop_hdim32_bf16_noncausal_gfx90a.cpp  flash_bwd_runner_kloop_hdim32_fp16_causal_gfx90a.cpp  (+86 more)
docs/: causal_mask_parameters_analysis.md  causal_mask_softmax_analysis.md  cube_vec_cooperation_analysis.md  encoder_decoder_mask_difference.md  kv_cache_explanation.md  kv_cache_implementation_analysis.md  l1_cache_optimization_analysis.md  mask_copy_explanation.md  mask_types_and_applications.md  mha_fwd_kvcache_task_tiling.md  noSkipKvS_calculation_diagram.txt  pv_matmul_blocking_analysis.md  task_tiling_analysis.md  transformer_token_generation_explanation.md  workspace_size_analysis.md  (+1 more)
flash_attn/cute/: .flake8  AUTHORS  MANIFEST.in  README.md  __init__.py  ampere_helpers.py  arch_policy.py  barrier.py  bench_utils.py  benchmark_attn.py  benchmark_block_sparsity.py  benchmark_flash_attention_fp8.py  benchmark_mask_mod.py  blackwell_hd256_causal_varlen_forward.py  blackwell_helpers.py  block_info.py  block_sparse_utils.py  block_sparsity.py  block_sparsity_benchmark_results.csv  cache_utils.py  compute_block_sparsity.py  copy_utils.py  cu_blocks_kernel.py  cute_dsl_ptxas.py  cute_dsl_utils.py  dk_gemm.py  dq_dqv_gemm.py  dropout.py  fa_logging.py  fast_math.py  flash_bwd.py  flash_bwd_mla_dk_sm100.py  flash_bwd_mla_dq_dqv_sm100.py  flash_bwd_mla_sm100.py  flash_bwd_postprocess.py  flash_bwd_preprocess.py  flash_bwd_sm100.py  flash_bwd_sm120.py  flash_bwd_sm90.py  flash_fwd.py  (+41 more)
flash_attn/cute/benchmarks/: bench_fp4.py  benchmark.py
flash_attn/cute/debug/: inline_blockscaled_results.md
flash_attn/cute/mla/: dq_dqv_gemm.py
flash_attn/cute/modified_utils/: block_scaled_layout_test.py  helpers.py
flash_attn/cute/tests/: test_deter.py  test_deter_flex.py
flash_attn_builder/: README.md  pyproject.toml
flash_attn_builder/flash_attn_builder/: main.py
(+1614 files in other folders)
